# bevy_template

./: Cargo.toml  README.md
src/: app.rs  main.rs
